Add TwoBit to ease Hamming decoding

--- a/Csci351DC1ftp/Csci351DC1ftp.csproj
+++ b/Csci351DC1ftp/Csci351DC1ftp.csproj
@@ -48,6 +48,7 @@
     <Compile Include="RequestCorruptedPacket.cs" />
     <Compile Include="RequestPacket.cs" />
     <Compile Include="TFTPPacket.cs" />
+    <Compile Include="TwoBit.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
