--- a/Csci351DC1ftp/Csci351DC1ftp.csproj
+++ b/Csci351DC1ftp/Csci351DC1ftp.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Bits.cs" />
     <Compile Include="DataPacket.cs" />
     <Compile Include="ErrorPacket.cs" />
+    <Compile Include="Hamming32Bit.cs" />
     <Compile Include="HammingClient.cs" />
     <Compile Include="NackPacket.cs" />
     <Compile Include="Program.cs" />
