--- a/Csci351DC1ftp/Csci351DC1ftp.csproj
+++ b/Csci351DC1ftp/Csci351DC1ftp.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="AckPacket.cs" />
     <Compile Include="Bits.cs" />
+    <Compile Include="Codeword.cs" />
     <Compile Include="DataPacket.cs" />
     <Compile Include="ErrorPacket.cs" />
     <Compile Include="Hamming32Bit.cs" />
